--- a/ehealth-central-configuration-development.properties
+++ b/ehealth-central-configuration-development.properties
@@ -2,9 +2,9 @@ server.url = 172.0.0.1:8383/development
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 ## PostgreSQL
-#spring.datasource.url=jdbc:postgresql://10.1.0.120:5432/ehealth_db
-#spring.datasource.username=ehealth
-#spring.datasource.password=ehealth
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ehealth
+#spring.datasource.username=postgres
+#spring.datasource.password=2201
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=ehealth
 spring.datasource.password=2201
