--- a/ehealth-central-configuration-development.properties
+++ b/ehealth-central-configuration-development.properties
@@ -5,8 +5,8 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 #spring.datasource.url=jdbc:postgresql://localhost:5432/ehealth
 #spring.datasource.username=postgres
 #spring.datasource.password=2201
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=ehealth
+spring.datasource.url=jdbc:postgresql://localhost:5432/ehealth
+spring.datasource.username=postgres
 spring.datasource.password=2201
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 # Hikari will use the above plus the following to setup connection pooling
