--- a/clinic-management-service/clinic-management-service-development.properties
+++ b/clinic-management-service/clinic-management-service-development.properties
@@ -7,7 +7,7 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 spring.datasource.url=jdbc:postgresql://localhost:3307/clinic_management
 spring.datasource.username=postgres
-spring.datasource.password=test1373
+spring.datasource.password=2201
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 # Hikari will use the above plus the following to setup connection pooling
 spring.datasource.hikari.minimumIdle=3
